unpackaged/main/default/objects/Exclude_from_Work__c/Exclude_from_Work__c.object-meta.xml
<CustomObject>
    <description>Object storing information/reasoning why a resource can't be staffed against a specific Account/Customer.</description>
    <label>Exclude from Work</label>
    <nameField>
        <label>Exclude from Work Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exclude from Works</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>