unpackaged/main/default/objects/Exclude_from_Work__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason why selected Resource is unable to work with the Selected Customer Account</description>
    <inlineHelpText>Reason why selected Resource is unable to work with the Selected Customer Account</inlineHelpText>
    <label>Reason</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>