unpackaged/main/default/objects/Exclude_from_Work__c/fields/Related_Customer__c.field-meta.xml
<CustomField>
    <fullName>Related_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account in which the Connected resource is unable to work with for a set reason</description>
    <inlineHelpText>Account in which the Connected resource is unable to work with for a set reason</inlineHelpText>
    <label>Related Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exclude from Works</relationshipLabel>
    <relationshipName>Exclude_from_Works</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>